feat: mkdir server api directory

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# storage
+/uploads
+/uploads/**/*
+/uploads/*
+./uploads
+./uploads/**/*
+./uploads/*
