--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "typescript": "^4.9.3"
   },
   "devDependencies": {
@@ -13,8 +14,8 @@
     "ts-node": "^10.9.1"
   },
   "scripts": {
-	  "dev":"ts-node ./src/app.ts",
-	  "build": "tsc --build --clean && tsc --build",
-	  "start": "node ./dist/app.js"
+    "dev": "ts-node ./src/app.ts",
+    "build": "tsc --build --clean && tsc --build",
+    "start": "node ./dist/app.js"
   }
 }
