--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,15 +1,22 @@
 {
   "name": "@services/server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/app",
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "typescript": "^4.9.3"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
   },
