--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,23 +1,15 @@
 {
-    "compilerOptions": {
-        "types": ["node", "jest"],
-        "target": "ES6",
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "outDir": "dist",
-        "rootDir": "src",
-        "strict": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "sourceMap": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "resolveJsonModule": true
-    },
-    "include": ["src"],
-    "references": [
-        {
-            "path": "../shared"
-        }
-    ]
+  "compilerOptions": {
+    "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "esModuleInterop":true,
+    "jsx": "react",                                /* Specify what JSX code is generated. */
+    "module": "commonjs",                                /* Specify what module code is generated. */
+    "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
+    "declarationMap": true,
+    "outDir": "./dist",
+    "declarationMap": true,
+    "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
+    "strict": true,                                      /* Enable all strict type-checking options. */
+    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+  }
 }
