--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,12 +13,16 @@
     "typescript": "^4.9.3"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/multer": "^1.4.7",
+    "@types/unzip-stream": "^0.3.1",
     "express": "^4.18.2",
+    "fs-extra": "^11.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "unzip-stream": "^0.3.1"
   },
   "scripts": {
     "dev": "ts-node ./src/app.ts",
