--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "morgan": "^1.10.0",
@@ -15,6 +16,7 @@
     "typescript": "^4.9.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/fs-extra": "^9.0.13",
     "@types/multer": "^1.4.7",
     "@types/unzip-stream": "^0.3.1",
